@@ -1,18 +1,21 @@
 
 Now:
-- interpreter doesn't work anymore
-- display non-consumed token if available (even after a rewind)
+
+- check Debug for existing files and Build automatically
+- still need to know ANTLR 3 path ?
+- sort content of auto-completion menu
+- sort content of rules/tokens table
+- problems with SD: a : ((A {;}| B)* D (B | {;} "hello, world!")*)*;
+- problem with ANTLR when comment after a rule: normal ?
+- debugger: parametrize the tab length
 - problem when more than one same LT between mark/rewind
+
+- interpreter doesn't work anymore
 - interpreter loops when bad input (i.e. java code for SimpleGrammar)
 - look at making the interpreter working for a simple grammar
 
-- disable rename and another call to debug while debugging
-- stop the debugger when closing the document
-
-- center the text when stepping with the debugger
-- can change L&F
 - optimize state arround external ref (negative state should be removed - see if it is always possible)
-- remove observer from notification when closing window
+- remove all ToDos
 
 Test
 - Windows/Linux: short-cuts, gutter position
@@ -26,6 +29,7 @@ Issues:
 - undo: rename + addition -> redo doesn't show "rename" but "addition"
 
 Later:
+- can change L&F
 - display LT in blue when exiting an alt (see Terence's email)
 - find
 - goto dialog
